examples/fail/test2.java
class A extends Object {
    Object x;
    A(Object y) {
        super();
        this.x = y;
    }
    Object getX() {
        return this.x;
    }
}
